--- a/index.html
+++ b/index.html
@@ -182,6 +182,10 @@
       </div>
       </p>
     </div>
+    <a href="https://github.com/Leena-code/weather-app" target="_blank">
+      Open-source code
+    </a>
+    by Natalie Lee
   </div>
 
   <script src="src/index.js"></script>
