--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://kit.fontawesome.com/f6b4137ee2.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
   <link rel="stylesheet" href="src/styles.css" />
@@ -24,7 +26,7 @@
               <input type="submit" value="🔎" class="form-control submit" />
             </div>
             </form>
-            <div class="col-3">
+            <div class="col-4">
               <button type="button" class="btn btn-success current-location-button">
                 Current Location
               </button>
@@ -59,7 +61,7 @@
           <div class="today">
             <div class="row">
               <div class="col-2">
-                Morning
+                08:00
                 <ul>
                   <li>
                     <i class="far fa-snowflake snowflake-icon"></i>
@@ -70,7 +72,18 @@
                 </ul>
               </div>
               <div class="col-2">
-                Noon
+                10:00
+                <ul>
+                  <li>
+                    <i class="far fa-snowflake snowflake-icon"></i>
+                  </li>
+                  <li>
+                    0 °C
+                  </li>
+                </ul>
+              </div>
+              <div class="col-2">
+                12:00
                 <ul>
                   <li>
                     <i class="fas fa-cloud-sun cloud-sun-icon"></i>
@@ -81,7 +94,7 @@
                 </ul>
               </div>
               <div class="col-2">
-                Afternoon
+                14:00
                 <ul>
                   <li>
                     <i class="fas fa-cloud-rain rain-icon"></i>
@@ -92,7 +105,7 @@
                 </ul>
               </div>
               <div class="col-2">
-                Evening
+                16:00
                 <ul>
                   <li>
                     <i class="far fa-snowflake snowflake-icon"></i>
@@ -103,13 +116,13 @@
                 </ul>
               </div>
               <div class="col-2">
-                Overnight
+                20:00
                 <ul>
                   <li>
                     <i class="far fa-snowflake snowflake-icon"></i>
                   </li>
                   <li>
-                    1 °C
+                    0 °C
                   </li>
                 </ul>
               </div>
@@ -120,64 +133,61 @@
           <div class="forecast">
             Forecast
           </div>
-          <hr />
-          <div class="row">
-            <div class="col">
-              Wed, 30.12.2020
+          <div class="days">
+            <div class="row day-1">
+              <div class="col-6">
+                Wed, 30.12.2020
+              </div>
+              <div class="col-3">
+                <i class="far fa-snowflake snowflake-icon"></i>
+              </div>
+              <div class="col-3">
+                5 °C
+              </div>
             </div>
-            <div class="col">
-              <i class="far fa-snowflake snowflake-icon"></i>
+            <div class="row day-2">
+              <div class="col-6">
+                Thu, 31.12.2020
+              </div>
+              <div class="col-3">
+                <i class="fas fa-cloud-sun cloud-sun-icon"></i>
+              </div>
+              <div class="col-3">
+                2 °C
+              </div>
             </div>
-            <div class="col">
-              5 °C
+            <div class="row day-2">
+              <div class="col-6">
+                Fri, 01.01.2021
+              </div>
+              <div class="col-3">
+                <i class="fas fa-sun sun-icon"></i>
+              </div>
+              <div class="col-3">
+                4 °C
+              </div>
             </div>
-          </div>
-          <hr />
-          <div class="row">
-            <div class="col">
-              Thu, 31.12.2020
+            <div class="row day-2">
+              <div class="col-6">
+                Sat, 02.01.2021
+              </div>
+              <div class="col-3">
+                <i class="fas fa-sun sun-icon"></i>
+              </div>
+              <div class="col-3">
+                6 °C
+              </div>
             </div>
-            <div class="col">
-              <i class="fas fa-cloud-sun cloud-sun-icon"></i>
-            </div>
-            <div class="col">
-              2 °C
-            </div>
-          </div>
-          <hr />
-          <div class="row">
-            <div class="col">
-              Fri, 01.01.2021
-            </div>
-            <div class="col">
-              <i class="fas fa-sun sun-icon"></i>
-            </div>
-            <div class="col">
-              4 °C
-            </div>
-          </div>
-          <hr />
-          <div class="row">
-            <div class="col">
-              Sat, 02.01.2021
-            </div>
-            <div class="col">
-              <i class="fas fa-sun sun-icon"></i>
-            </div>
-            <div class="col">
-              6 °C
-            </div>
-          </div>
-          <hr />
-          <div class="row">
-            <div class="col">
-              Sun, 03.01.2021
-            </div>
-            <div class="col">
-              <i class="far fa-snowflake snowflake-icon"></i>
-            </div>
-            <div class="col">
-              -1 °C
+            <div class="row day-3">
+              <div class="col-6">
+                Sun, 03.01.2021
+              </div>
+              <div class="col-3">
+                <i class="far fa-snowflake snowflake-icon"></i>
+              </div>
+              <div class="col-3">
+                -1 °C
+              </div>
             </div>
           </div>
         </p>
