Removed the focus of the button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       <div class="weather-app">
         <form id="search-form">
           <div class="row">
-            <div class="col-1"></div>
             <div class="col-4 search-box">
               <input type="search" placeholder="Search city" class="form-control search" autocomplete="off" id="search-city"/>
             </div>
@@ -27,7 +26,7 @@
             </div>
             </form>
             <div class="col-4">
-              <button type="button" class="btn btn-success current-location-button">
+              <current-location-button>
                 Current Location
               </button>
             </div>
