Added weather icon next to the current temperature

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="col-4 search-box">
               <input type="search" placeholder="Search city" class="form-control search" autocomplete="off" id="search-city"/>
             </div>
-            <div class="col-2 submit-box">
+            <div class="col-3 submit-box">
               <input type="submit" value="🔎" class="form-control submit" />
             </div>
             </form>
@@ -47,11 +47,12 @@
           </div>
           <div class="col-6">
             <h3>
-              <div class="temperature">
-                5 °C
-              </div>
+              <img src="http://openweathermap.org/img/wn/04d@2x.png" alt="broken clouds">
+              <span class="temperature">
+                5°
+              </span>
               <div id="description">
-                cloudy
+                broken clouds
               </div>
             </h3>
           </div>
@@ -60,68 +61,80 @@
           <div class="today">
             <div class="row">
               <div class="col-2">
-                08:00
                 <ul>
+                  <li>
+                    06:00
+                  </li>
                   <li>
                     <i class="far fa-snowflake snowflake-icon"></i>
                   </li>
                   <li>
-                    0 °C
+                    0°
                   </li>
                 </ul>
               </div>
               <div class="col-2">
-                10:00
                 <ul>
+                  <li>
+                    09:00
+                  </li>
                   <li>
                     <i class="far fa-snowflake snowflake-icon"></i>
                   </li>
                   <li>
-                    0 °C
+                    0°
                   </li>
                 </ul>
               </div>
               <div class="col-2">
-                12:00
                 <ul>
+                  <li>
+                    12:00
+                  </li>
                   <li>
                     <i class="fas fa-cloud-sun cloud-sun-icon"></i>
                   </li>
                   <li>
-                    7 °C
+                    7°
                   </li>
                 </ul>
               </div>
               <div class="col-2">
-                14:00
                 <ul>
+                  <li>
+                    15:00
+                  </li>
                   <li>
                     <i class="fas fa-cloud-rain rain-icon"></i>
                   </li>
                   <li>
-                    5 °C
+                    5°
                   </li>
                 </ul>
               </div>
               <div class="col-2">
-                16:00
                 <ul>
+                  <li>
+                    18:00
+                  </li>
                   <li>
                     <i class="far fa-snowflake snowflake-icon"></i>
                   </li>
                   <li>
-                    3 °C
+                    3°
                   </li>
                 </ul>
               </div>
               <div class="col-2">
-                20:00
                 <ul>
+                  <li>
+                    21:00
+                  </li>
                   <li>
                     <i class="far fa-snowflake snowflake-icon"></i>
                   </li>
                   <li>
-                    0 °C
+                    0°
                   </li>
                 </ul>
               </div>
@@ -141,7 +154,7 @@
                 <i class="far fa-snowflake snowflake-icon"></i>
               </div>
               <div class="col-3">
-                5 °C
+                5°
               </div>
             </div>
             <div class="row day-2">
@@ -152,7 +165,7 @@
                 <i class="fas fa-cloud-sun cloud-sun-icon"></i>
               </div>
               <div class="col-3">
-                2 °C
+                2°
               </div>
             </div>
             <div class="row day-2">
@@ -163,7 +176,7 @@
                 <i class="fas fa-sun sun-icon"></i>
               </div>
               <div class="col-3">
-                4 °C
+                4°
               </div>
             </div>
             <div class="row day-2">
@@ -174,7 +187,7 @@
                 <i class="fas fa-sun sun-icon"></i>
               </div>
               <div class="col-3">
-                6 °C
+                6°
               </div>
             </div>
             <div class="row day-3">
@@ -185,7 +198,7 @@
                 <i class="far fa-snowflake snowflake-icon"></i>
               </div>
               <div class="col-3">
-                -1 °C
+                -1°
               </div>
             </div>
           </div>
