Added relevant current-weather icon from the API

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </div>
           <div class="col-6">
             <h3>
-              <img src="http://openweathermap.org/img/wn/04d@2x.png" alt="broken clouds">
+              <img src="" alt="" id="current-weather-icon">
               <span class="temperature">
                 5°
               </span>
