--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="row">
           <div class="col-6">
             <h1>
-              Zurich, Switzerland
+              Zurich, CH
             </h1>
             <h2>
               <div class="day">
@@ -58,87 +58,7 @@
           </div>
         </div>
         <p>
-          <div class="today">
-            <div class="row">
-              <div class="col-2">
-                <ul>
-                  <li>
-                    06:00
-                  </li>
-                  <li>
-                    <i class="far fa-snowflake snowflake-icon"></i>
-                  </li>
-                  <li>
-                    0°
-                  </li>
-                </ul>
-              </div>
-              <div class="col-2">
-                <ul>
-                  <li>
-                    09:00
-                  </li>
-                  <li>
-                    <i class="far fa-snowflake snowflake-icon"></i>
-                  </li>
-                  <li>
-                    0°
-                  </li>
-                </ul>
-              </div>
-              <div class="col-2">
-                <ul>
-                  <li>
-                    12:00
-                  </li>
-                  <li>
-                    <i class="fas fa-cloud-sun cloud-sun-icon"></i>
-                  </li>
-                  <li>
-                    7°
-                  </li>
-                </ul>
-              </div>
-              <div class="col-2">
-                <ul>
-                  <li>
-                    15:00
-                  </li>
-                  <li>
-                    <i class="fas fa-cloud-rain rain-icon"></i>
-                  </li>
-                  <li>
-                    5°
-                  </li>
-                </ul>
-              </div>
-              <div class="col-2">
-                <ul>
-                  <li>
-                    18:00
-                  </li>
-                  <li>
-                    <i class="far fa-snowflake snowflake-icon"></i>
-                  </li>
-                  <li>
-                    3°
-                  </li>
-                </ul>
-              </div>
-              <div class="col-2">
-                <ul>
-                  <li>
-                    21:00
-                  </li>
-                  <li>
-                    <i class="far fa-snowflake snowflake-icon"></i>
-                  </li>
-                  <li>
-                    0°
-                  </li>
-                </ul>
-              </div>
-            </div>
+          <div class="row today" id="hour-forecasts">
           </div>
         </p>
         <p>
