Moved daily-forecasts from html to js

--- a/index.html
+++ b/index.html
@@ -65,62 +65,7 @@
           <div class="forecast">
             Forecast
           </div>
-          <div class="days">
-            <div class="row day-1">
-              <div class="col-6">
-                Wed, 30.12.2020
-              </div>
-              <div class="col-3">
-                <i class="far fa-snowflake snowflake-icon"></i>
-              </div>
-              <div class="col-3">
-                5°
-              </div>
-            </div>
-            <div class="row day-2">
-              <div class="col-6">
-                Thu, 31.12.2020
-              </div>
-              <div class="col-3">
-                <i class="fas fa-cloud-sun cloud-sun-icon"></i>
-              </div>
-              <div class="col-3">
-                2°
-              </div>
-            </div>
-            <div class="row day-2">
-              <div class="col-6">
-                Fri, 01.01.2021
-              </div>
-              <div class="col-3">
-                <i class="fas fa-sun sun-icon"></i>
-              </div>
-              <div class="col-3">
-                4°
-              </div>
-            </div>
-            <div class="row day-2">
-              <div class="col-6">
-                Sat, 02.01.2021
-              </div>
-              <div class="col-3">
-                <i class="fas fa-sun sun-icon"></i>
-              </div>
-              <div class="col-3">
-                6°
-              </div>
-            </div>
-            <div class="row day-3">
-              <div class="col-6">
-                Sun, 03.01.2021
-              </div>
-              <div class="col-3">
-                <i class="far fa-snowflake snowflake-icon"></i>
-              </div>
-              <div class="col-3">
-                -1°
-              </div>
-            </div>
+          <div class="row days" id="daily-forecasts">
           </div>
         </p>
       </div>
