Changed background and added css to daily-forecast

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </div>
           <div class="col-6">
             <h3>
-              <img src="" alt="" id="current-weather-icon">
+              <img src="https://openweathermap.org/img/wn/04d@2x.png" alt="" id="current-weather-icon">
               <span class="temperature">
                 5°
               </span>
@@ -62,9 +62,6 @@
           </div>
         </p>
         <p>
-          <div class="forecast">
-            Forecast
-          </div>
           <div class="row days" id="daily-forecasts">
           </div>
         </p>
