Changed button to current-location-button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="col-4">
               <current-location-button>
                 Current Location
-              </button>
+              </current-location-button>
             </div>
           </div>        
         <div class="row">
